# mkdocs-htmlextradata-plugin

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  pyrightconig.json
htmlextradata/: __init__.py  plugin.py
